--- a/brilhante.html
+++ b/brilhante.html
@@ -89,7 +89,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
-						<p class="descricao suites">Suíte 34</p>
+						<p class="descricao suites"><span></span>Suíte 34</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -105,7 +105,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 49", frigobar, ar condicionado, pole dance com jogo de luzes, <strong>mesa de bilhar</strong>, <strong>churrasqueira</strong>, sauna, hidro spa com cascata e teto solar.</p>
+								<p><strong>Mesa de bilhar, churrasqueira, pole dance com jogo de luzes, sauna, hidro spa com cascata, teto solar</strong>, smart TV 48", frigobar, ar condicionado.</p>
 							</div>
 						</section>
 					</section>
