--- a/ouro.html
+++ b/ouro.html
@@ -85,7 +85,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Ouro</span>
-						<p class="descricao suites">Suíte 32</p>
+						<p class="descricao suites"><span></span>Suíte 32</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -101,7 +101,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>TV LED 32", frigobar, ar condicionado, e som.</p>
+								<p>TV LED 32", frigobar, ar condicionado e som.</p>
 							</div>
 						</section>
 					</section>
@@ -117,7 +117,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Ouro</span>
-						<p class="descricao suites">Suíte 33</p>
+						<p class="descricao suites"><span></span>Suíte 33</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -133,7 +133,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>TV LED 32", frigobar, ar condicionado, e som.</p>
+								<p>TV LED 32", frigobar, ar condicionado e som.</p>
 							</div>
 						</section>
 					</section>
