--- a/production/prata.html
+++ b/production/prata.html
@@ -74,106 +74,108 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
-					<span class="imagem brilhante"></span>
+					<span class="imagem prata-01">
+						<a href="assets/images/suites/Prata/foto-suíte-01-prata-perspectiva-01.jpg" data-fancybox="prata">
+							<span></span>
+							Ver fotos
+						</a>
+						<a href="assets/images/suites/Prata/foto-suíte-02-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-03-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-04-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-05-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-06-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-07-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-08-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-09-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+						<a href="assets/images/suites/Prata/foto-suíte-10-prata-perspectiva-01.jpg" data-fancybox="prata" class="hidden"></a>
+					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Brilhante</span>
-						<p class="descricao">Suíte com mesa de bilhar, churrasqueira e muito mais.</p>
-						<span class="preco">R$ 280,00</span>
-						<a href="brilhante.html">Saiba mais</a>
-					</section>
-				</li>
-				<li>
-					<span class="imagem rubi-duplex"></span>
-					<section class="informacoes">
-						<span class="titulo">Suíte Rubi Duplex</span>
-						<p class="descricao">Suíte com hidro e churrasqueira.</p>
-						<span class="preco">R$ 180,00</span>
-						<a href="rubi-duplex.html">Saiba mais</a>
-					</section>
-				</li>
-				<li>
-					<span class="imagem rubi"></span>
-					<section class="informacoes">
-						<span class="titulo">Suíte Rubi</span>
-						<p class="descricao">Suítes decoradas com cama e hidro no formato de coração.</p>
-						<span class="preco">R$ 165,00</span>
-						<a href="rubi.html">Saiba mais</a>
-					</section>
-				</li>
-				<li>
-					<span class="imagem esmeralda"></span>
-					<section class="informacoes">
-						<span class="titulo">Suíte Esmeralda</span>
-						<p class="descricao">Suíte com hidro e TV de 40"</p>
-						<span class="preco">R$ 135,00</span>
-						<a href="esmeralda.html">Saiba mais</a>
-					</section>
-				</li>
-				<li>
-					<span class="imagem perola"></span>
-					<section class="informacoes">
-						<span class="titulo">Suíte Pérola</span>
-						<p class="descricao">3 suítes diferentemente decoradas.</p>
-						<span class="preco">R$ 110,00</span>
-						<a href="perola.html">Saiba mais</a>
-					</section>
-				</li>
-				<li>
-					<span class="imagem diamante"></span>
-					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
-						<p class="descricao">Suíte com frigobar e ar condicionado.</p>
-						<span class="preco">R$ 90,00</span>
-						<a href="diamante.html">Saiba mais</a>
-					</section>
-				</li>
-				<li>
-					<span class="imagem ouro"></span>
-					<section class="informacoes">
-						<span class="titulo">Suíte Ouro</span>
-						<p class="descricao">Suíte com frigobar.</p>
-						<span class="preco">R$ 80,00</span>
-						<a href="ouro.html">Saiba mais</a>
+						<span class="titulo">Suíte Prata</span>
+						<p class="descricao suites"><span></span>Suítes 01 a 10</p>
+						<section class="detalhes">
+							<div class="blocos periodos">
+								<h3><span class="periodo"></span>Preços e períodos:</h3>
+								<p>Todos os dias após as 6h</p>
+								<p>Permanência de 3 horas</p>
+								<p class="preco">R$ 55,00</p>
+							</div>
+							<div class="blocos pernoites">
+								<h3><span class="pernoite"></span>Pernoites:</h3>
+								<p>Dom a 5ª a partir das 2h</p>
+								<p>Permanência até as 11h</p>
+								<p class="preco">R$ 000,00</p>
+							</div>
+							<div class="blocos descricao">
+								<h3><span class="descricao"></span>Essa suíte tem:</h3>
+								<p>TV LED 22", frigobar e ventilador de teto.</p>
+							</div>
+						</section>
 					</section>
 				</li>
 			</ul>
 		</section>
 
-		<section class="nossos-contatos">
-			<h1>Contatos</h1>
+		<section class="suites-home">
+			<h1>Veja também</h1>
 
-			<section class="contatos">
-				<section class="blocos logo">
-					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
-				</section>
-
-				<section class="blocos endereco">
-					<h3><span class="endereco"></span> Endereço</h3>
-					<p>Rua Aparecida, 1410</p>
-					<p>Jardim Santa Rosália</p>
-					<p>Sorocaba - SP</p>
-				</section>
-
-				<section class="blocos informacoes">
-					<h3><span class="informacoes"></span> Informações</h3>
-					<p>(11) 99105-5975</p>
-				</section>
-
-				<aside class="blocos social">
-					<h3><span class="social"></span> Redes sociais</h3>
-
-					<ul>
-						<li><a href="https://www.facebook.com/pousadavocequesabe24h/" target="_blank" class="facebook"></a></li>
-					</ul>
-				</aside>
-
-				<aside class="blocos gps">
-					<ul>
-						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
-						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
-					</ul>
-				</aside>
-			</section>
+			<ul>
+				<li>
+					<a href="brilhante.html">
+						<span class="imagem brilhante"></span>
+						<span class="preco">280,00</span>
+						<span class="titulo">Brilhante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi-duplex.html">
+						<span class="imagem rubi-duplex"></span>
+						<span class="preco">180,00</span>
+						<span class="titulo">Rubi duplex</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi.html">
+						<span class="imagem rubi"></span>
+						<span class="preco">165,00</span>
+						<span class="titulo">Rubi</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="esmeralda.html">
+						<span class="imagem esmeralda"></span>
+						<span class="preco">135,00</span>
+						<span class="titulo">Esmeralda</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="perola.html">
+						<span class="imagem perola"></span>
+						<span class="preco">110,00</span>
+						<span class="titulo">Perola</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="diamante.html">
+						<span class="imagem diamante"></span>
+						<span class="preco">90,00</span>
+						<span class="titulo">Diamante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="ouro.html">
+						<span class="imagem ouro"></span>
+						<span class="preco">80,00</span>
+						<span class="titulo">Ouro</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+			</ul>
 		</section>
 
 		<section class="menu-rodape">
