--- a/production/rubi-duplex.html
+++ b/production/rubi-duplex.html
@@ -75,20 +75,20 @@
 			<ul>
 				<li>
 					<span class="imagem rubi-duplex-17">
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-17">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
-						<p class="descricao suites">Suíte 17</p>
+						<p class="descricao suites"><span></span>Suíte 17</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -104,26 +104,26 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Com cobertura, hidro, <strong>churrasqueira</strong>, Smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
+								<p><strong>Com cobertura, hidro, churrasqueira</strong>, smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
 							</div>
 						</section>
 					</section>
 				</li>
 				<li>
 					<span class="imagem rubi-duplex-18">
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-18">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
-						<p class="descricao suites">Suíte 18</p>
+						<p class="descricao suites"><span></span>Suíte 18</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -139,7 +139,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p><strong>Com cobertura</strong>, hidro, <strong>churrasqueira</strong>, Smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
+								<p><strong>Com cobertura, hidro, churrasqueira</strong>, smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
 							</div>
 						</section>
 					</section>
