--- a/production/suites.html
+++ b/production/suites.html
@@ -86,7 +86,7 @@
 					<span class="imagem rubi-duplex"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
-						<p class="descricao">Suíte com hidro e churrasqueira.</p>
+						<p class="descricao">Suíte com cobertura, hidro e churrasqueira</p>
 						<span class="preco">R$ 180,00</span>
 						<a href="rubi-duplex.html">Saiba mais</a>
 					</section>
@@ -95,7 +95,7 @@
 					<span class="imagem rubi"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
-						<p class="descricao">Suítes decoradas com cama e hidro no formato de coração.</p>
+						<p class="descricao">Suíte com banheira oval.</p>
 						<span class="preco">R$ 165,00</span>
 						<a href="rubi.html">Saiba mais</a>
 					</section>
@@ -104,7 +104,7 @@
 					<span class="imagem esmeralda"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Esmeralda</span>
-						<p class="descricao">Suíte com hidro e TV de 40"</p>
+						<p class="descricao">Suíte com hidro e smart TV de 40"</p>
 						<span class="preco">R$ 135,00</span>
 						<a href="esmeralda.html">Saiba mais</a>
 					</section>
@@ -113,7 +113,7 @@
 					<span class="imagem perola"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Pérola</span>
-						<p class="descricao">3 suítes diferentemente decoradas.</p>
+						<p class="descricao">Suíte com cama no formato de carro, cama massageadora e toca disco</p>
 						<span class="preco">R$ 110,00</span>
 						<a href="perola.html">Saiba mais</a>
 					</section>
@@ -122,7 +122,7 @@
 					<span class="imagem diamante"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Diamante</span>
-						<p class="descricao">Suíte com frigobar e ar condicionado.</p>
+						<p class="descricao">Suíte com cama no formato de coração</p>
 						<span class="preco">R$ 90,00</span>
 						<a href="diamante.html">Saiba mais</a>
 					</section>
@@ -131,7 +131,7 @@
 					<span class="imagem ouro"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Ouro</span>
-						<p class="descricao">Suíte com frigobar.</p>
+						<p class="descricao">Suíte com frigobar e ar condicionado</p>
 						<span class="preco">R$ 80,00</span>
 						<a href="ouro.html">Saiba mais</a>
 					</section>
@@ -140,7 +140,7 @@
 					<span class="imagem prata"></span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Prata</span>
-						<p class="descricao">3 suítes diferentes unicamente decoradas.</p>
+						<p class="descricao">Suíte com frigobar</p>
 						<span class="preco">R$ 55,00</span>
 						<a href="prata.html">Saiba mais</a>
 					</section>
