--- a/rubi-duplex.html
+++ b/rubi-duplex.html
@@ -89,7 +89,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
-						<p class="descricao suites">Suíte 17</p>
+						<p class="descricao suites"><span></span>Suíte 17</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -105,7 +105,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Com cobertura, hidro, <strong>churrasqueira</strong>, Smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
+								<p><strong>Com cobertura, hidro, churrasqueira</strong>, smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
 							</div>
 						</section>
 					</section>
@@ -124,7 +124,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
-						<p class="descricao suites">Suíte 18</p>
+						<p class="descricao suites"><span></span>Suíte 18</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -140,7 +140,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p><strong>Com cobertura</strong>, hidro, <strong>churrasqueira</strong>, Smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
+								<p><strong>Com cobertura, hidro, churrasqueira</strong>, smart TV 48", frigobar, ar condicionado, som USB e secador.</p>
 							</div>
 						</section>
 					</section>
