--- a/rubi.html
+++ b/rubi.html
@@ -88,7 +88,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
-						<p class="descricao suites">Suíte 34</p>
+						<p class="descricao suites"><span></span>Suíte 34</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -104,7 +104,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 40", cama box, <strong>banheira oval</strong>, frigobar, ar condicionado, som e secador.</p>
+								<p><strong>Banheira oval</strong>, smart TV 40", cama box, frigobar, ar condicionado, som e secador.</p>
 							</div>
 						</section>
 					</section>
@@ -121,7 +121,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
-						<p class="descricao suites">Suíte 35</p>
+						<p class="descricao suites"><span></span>Suíte 35</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -137,7 +137,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 40", cama box, <strong>banheira oval</strong>, frigobar, ar condicionado, som e secador.</p>
+								<p><strong>Banheira oval</strong>, smart TV 40", cama box, frigobar, ar condicionado, som e secador.</p>
 							</div>
 						</section>
 					</section>
