--- a/esmeralda.html
+++ b/esmeralda.html
@@ -88,7 +88,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
-						<p class="descricao suites">Suíte 24</p>
+						<p class="descricao suites"><span></span>Suíte 24</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -100,7 +100,7 @@
 								<h3><span class="pernoite"></span>Pernoites:</h3>
 								<p>Dom a 5ª a partir das 2h</p>
 								<p>Permanência até as 11h</p>
-								<p class="preco">R$ 200,00</p>
+								<p class="preco">R$ 000,00</p>
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
@@ -120,7 +120,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
-						<p class="descricao suites">Suíte 25</p>
+						<p class="descricao suites"><span></span>Suíte 25</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -132,7 +132,7 @@
 								<h3><span class="pernoite"></span>Pernoites:</h3>
 								<p>Dom a 5ª a partir das 2h</p>
 								<p>Permanência até as 11h</p>
-								<p class="preco">R$ 200,00</p>
+								<p class="preco">R$ 000,00</p>
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
