--- a/perola.html
+++ b/perola.html
@@ -89,7 +89,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Pérola</span>
-						<p class="descricao suites">Suíte 15</p>
+						<p class="descricao suites"><span></span>Suíte 15</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -105,14 +105,15 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV LED 32", frigobar, ar condicionado, toca disco e secador de cabelo.</p>
+								<p><strong>Toca disco</strong>, TV LED 32", frigobar, ar condicionado e secador de cabelo.</p>
 							</div>
 						</section>
 					</section>
 				</li>
 				<li>
 					<span class="imagem perola-19">
-						<a href="assets/images/suites/Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-01.jpg" data-fancybox="perola-19">
+						<a href="assets/images/suites/
+						Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-01.jpg" data-fancybox="perola-19">
 							<span></span>
 							Ver fotos
 						</a>
@@ -121,7 +122,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Pérola</span>
-						<p class="descricao suites">Suíte 19</p>
+						<p class="descricao suites"><span></span>Suíte 19</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -137,7 +138,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 40", <strong>cama massageadora</strong>, frigobar, ar condicionado, espelho no teto, som USB e secador de cabelo.</p>
+								<p><strong>Cama massageadora</strong>, smart TV 40", frigobar, ar condicionado, espelho no teto, som USB e secador de cabelo.</p>
 							</div>
 						</section>
 					</section>
@@ -153,7 +154,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Pérola</span>
-						<p class="descricao suites">Suíte 20</p>
+						<p class="descricao suites"><span></span>Suíte 20</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -169,7 +170,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 40", frigobar, ar condicionado, espelho no teto, som USB e secador de cabelo.</p>
+								<p><strong>Cama no formato de carro</strong>, smart TV 40", frigobar, ar condicionado, espelho no teto, som USB e secador de cabelo.</p>
 							</div>
 						</section>
 					</section>
