--- a/prata.html
+++ b/prata.html
@@ -92,7 +92,7 @@
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Prata</span>
-						<p class="descricao suites">Suítes 01, 02, 03, 04, 05, 06, 07, 08, 09 e 10</p>
+						<p class="descricao suites"><span></span>Suítes 01 a 10</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -108,7 +108,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 49", frigobar, ar condicionado, pole dance com jogo de luzes, <strong>mesa de bilhar</strong>, <strong>churrasqueira</strong>, sauna, hidro spa com cascata e teto solar.</p>
+								<p>TV LED 22", frigobar e ventilador de teto.</p>
 							</div>
 						</section>
 					</section>
