--- a/production/brilhante.html
+++ b/production/brilhante.html
@@ -75,20 +75,20 @@
 			<ul>
 				<li>
 					<span class="imagem brilhante">
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-01.jpg" data-fancybox="brilhante" data-caption="Legenda">
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-01.jpg" data-fancybox="brilhante">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-02.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-03.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-04.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-05.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-06.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-07.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-02.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-03.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-04.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-05.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-06.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-07.jpg" data-fancybox="brilhante" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
-						<p class="descricao suites">Suíte 34</p>
+						<p class="descricao suites"><span></span>Suíte 34</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -104,7 +104,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 49", frigobar, ar condicionado, pole dance com jogo de luzes, <strong>mesa de bilhar</strong>, <strong>churrasqueira</strong>, sauna, hidro spa com cascata e teto solar.</p>
+								<p><strong>Mesa de bilhar, churrasqueira, pole dance com jogo de luzes, sauna, hidro spa com cascata, teto solar</strong>, smart TV 48", frigobar, ar condicionado.</p>
 							</div>
 						</section>
 					</section>
