--- a/production/ouro.html
+++ b/production/ouro.html
@@ -71,49 +71,136 @@
 
 		<span class="fake"></span>
 		
-		<h1>Ouro 32,33</h1>
-		<h2>galeria de fotos igual para todas as suites (32,33)</h2>
-		<p><strong>descrição: </strong>TV LED 32", FRIGOBAR, AR COND, SOM</p>
+		<section class="suites-pousada">
+			<ul>
+				<li>
+					<span class="imagem ouro-32">
+						<a href="assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-01.jpg" data-fancybox="ouro-32">
+							<span></span>
+							Ver fotos
+						</a>
+						<a href="assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-02.jpg" data-fancybox="ouro-32" class="hidden"></a>
+						<a href="assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-03.jpg" data-fancybox="ouro-32" class="hidden"></a>
+					</span>
+					<section class="informacoes">
+						<span class="titulo">Suíte Ouro</span>
+						<p class="descricao suites"><span></span>Suíte 32</p>
+						<section class="detalhes">
+							<div class="blocos periodos">
+								<h3><span class="periodo"></span>Preços e períodos:</h3>
+								<p>Todos os dias após as 6h</p>
+								<p>Permanência de 3 horas</p>
+								<p class="preco">R$ 80,00</p>
+							</div>
+							<div class="blocos pernoites">
+								<h3><span class="pernoite"></span>Pernoites:</h3>
+								<p>Dom a 5ª a partir das 2h</p>
+								<p>Permanência até as 11h</p>
+								<p class="preco">R$ 200,00</p>
+							</div>
+							<div class="blocos descricao">
+								<h3><span class="descricao"></span>Essa suíte tem:</h3>
+								<p>TV LED 32", frigobar, ar condicionado e som.</p>
+							</div>
+						</section>
+					</section>
+				</li>
+				<li>
+					<span class="imagem ouro-33">
+						<a href="assets/images/suites/Ouro/Suíte-33/Foto-suíte-33-ouro-perspectiva-01.jpg" data-fancybox="ouro-33">
+							<span></span>
+							Ver fotos
+						</a>
+						<a href="assets/images/suites/Ouro/Suíte-33/Foto-suíte-33-ouro-perspectiva-02.jpg" data-fancybox="ouro-33" class="hidden"></a>
+						<a href="assets/images/suites/Ouro/Suíte-33/Foto-suíte-33-ouro-perspectiva-03.jpg" data-fancybox="ouro-33" class="hidden"></a>
+					</span>
+					<section class="informacoes">
+						<span class="titulo">Suíte Ouro</span>
+						<p class="descricao suites"><span></span>Suíte 33</p>
+						<section class="detalhes">
+							<div class="blocos periodos">
+								<h3><span class="periodo"></span>Preços e períodos:</h3>
+								<p>Todos os dias após as 6h</p>
+								<p>Permanência de 3 horas</p>
+								<p class="preco">R$ 80,00</p>
+							</div>
+							<div class="blocos pernoites">
+								<h3><span class="pernoite"></span>Pernoites:</h3>
+								<p>Dom a 5ª a partir das 2h</p>
+								<p>Permanência até as 11h</p>
+								<p class="preco">R$ 200,00</p>
+							</div>
+							<div class="blocos descricao">
+								<h3><span class="descricao"></span>Essa suíte tem:</h3>
+								<p>TV LED 32", frigobar, ar condicionado e som.</p>
+							</div>
+						</section>
+					</section>
+				</li>
+			</ul>
+		</section>
 
-		<br><p>------</p><br>
+		<section class="suites-home">
+			<h1>Veja também</h1>
 
-		<a href="suites.html">VOLTAR</a>
-
-		<section class="nossos-contatos">
-			<h1>Contatos</h1>
-
-			<section class="contatos">
-				<section class="blocos logo">
-					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
-				</section>
-
-				<section class="blocos endereco">
-					<h3><span class="endereco"></span> Endereço</h3>
-					<p>Rua Aparecida, 1410</p>
-					<p>Jardim Santa Rosália</p>
-					<p>Sorocaba - SP</p>
-				</section>
-
-				<section class="blocos informacoes">
-					<h3><span class="informacoes"></span> Informações</h3>
-					<p>(11) 99105-5975</p>
-				</section>
-
-				<aside class="blocos social">
-					<h3><span class="social"></span> Redes sociais</h3>
-
-					<ul>
-						<li><a href="https://www.facebook.com/pousadavocequesabe24h/" target="_blank" class="facebook"></a></li>
-					</ul>
-				</aside>
-
-				<aside class="blocos gps">
-					<ul>
-						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
-						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
-					</ul>
-				</aside>
-			</section>
+			<ul>
+				<li>
+					<a href="brilhante.html">
+						<span class="imagem brilhante"></span>
+						<span class="preco">280,00</span>
+						<span class="titulo">Brilhante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi-duplex.html">
+						<span class="imagem rubi-duplex"></span>
+						<span class="preco">180,00</span>
+						<span class="titulo">Rubi duplex</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi.html">
+						<span class="imagem rubi"></span>
+						<span class="preco">165,00</span>
+						<span class="titulo">Rubi</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="esmeralda.html">
+						<span class="imagem esmeralda"></span>
+						<span class="preco">135,00</span>
+						<span class="titulo">Esmeralda</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="perola.html">
+						<span class="imagem perola"></span>
+						<span class="preco">110,00</span>
+						<span class="titulo">Perola</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="diamante.html">
+						<span class="imagem diamante"></span>
+						<span class="preco">90,00</span>
+						<span class="titulo">Diamante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="prata.html">
+						<span class="imagem prata"></span>
+						<span class="preco">55,00</span>
+						<span class="titulo">Prata</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+			</ul>
 		</section>
 
 		<section class="menu-rodape">
