--- a/production/perola.html
+++ b/production/perola.html
@@ -71,62 +71,110 @@
 
 		<span class="fake"></span>
 		
-		<h1>Suítes Pérola</h1>
-
-		<br><p>------</p><br>
-
-		<h2>galeria de fotos da suite (15 – Retro)</h2>
-		<p><strong>descrição: </strong>TV LED 32", FRIGOBAR, AR COND, TOCA DISCO, SECADOR DE CABELO</p>
-
-		<br><p>------</p><br>
-
-		<h2>galeria de fotos da suite (19 – Com cama massageadora)</h2>
-		<p><strong>descrição: </strong>TV SMART 40", CAMA MASSAGEADORA, FRIGOBAR, AR COND, SOM USB, SECADOR DE CABELO</p>
-
-		<br><p>------</p><br>
-
-		<h2>galeria de fotos da suite (20 – Fusca Amarelo)</h2>
-		<p><strong>descrição: </strong>TV SMART 40", FRIGOBAR, AR COND, ESPELHO NO TETO, SOM USB, SECADOR DE CABELO</p>
-
-		<br><p>------</p><br>
-
-		<a href="suites.html">VOLTAR</a>
-
-		<section class="nossos-contatos">
-			<h1>Contatos</h1>
-
-			<section class="contatos">
-				<section class="blocos logo">
-					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
-				</section>
-
-				<section class="blocos endereco">
-					<h3><span class="endereco"></span> Endereço</h3>
-					<p>Rua Aparecida, 1410</p>
-					<p>Jardim Santa Rosália</p>
-					<p>Sorocaba - SP</p>
-				</section>
-
-				<section class="blocos informacoes">
-					<h3><span class="informacoes"></span> Informações</h3>
-					<p>(11) 99105-5975</p>
-				</section>
-
-				<aside class="blocos social">
-					<h3><span class="social"></span> Redes sociais</h3>
-
-					<ul>
-						<li><a href="https://www.facebook.com/pousadavocequesabe24h/" target="_blank" class="facebook"></a></li>
-					</ul>
-				</aside>
-
-				<aside class="blocos gps">
-					<ul>
-						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
-						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
-					</ul>
-				</aside>
-			</section>
+		<section class="suites-pousada">
+			<ul>
+				<li>
+					<span class="imagem perola-15">
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-01.jpg" data-fancybox="perola-15">
+							<span></span>
+							Ver fotos
+						</a>
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-02.jpg" data-fancybox="perola-15" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-03.jpg" data-fancybox="perola-15" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-04.jpg" data-fancybox="perola-15" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-05.jpg" data-fancybox="perola-15" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-06.jpg" data-fancybox="perola-15" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-07.jpg" data-fancybox="perola-15" class="hidden"></a>
+					</span>
+					<section class="informacoes">
+						<span class="titulo">Suíte Pérola</span>
+						<p class="descricao suites"><span></span>Suíte 15</p>
+						<section class="detalhes">
+							<div class="blocos periodos">
+								<h3><span class="periodo"></span>Preços e períodos:</h3>
+								<p>Todos os dias após as 6h</p>
+								<p>Permanência de 3 horas</p>
+								<p class="preco">R$ 110,00</p>
+							</div>
+							<div class="blocos pernoites">
+								<h3><span class="pernoite"></span>Pernoites:</h3>
+								<p>Dom a 5ª a partir das 2h</p>
+								<p>Permanência até as 11h</p>
+								<p class="preco">R$ 000,00</p>
+							</div>
+							<div class="blocos descricao">
+								<h3><span class="descricao"></span>Essa suíte tem:</h3>
+								<p><strong>Toca disco</strong>, TV LED 32", frigobar, ar condicionado e secador de cabelo.</p>
+							</div>
+						</section>
+					</section>
+				</li>
+				<li>
+					<span class="imagem perola-19">
+						<a href="assets/images/suites/
+						Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-01.jpg" data-fancybox="perola-19">
+							<span></span>
+							Ver fotos
+						</a>
+						<a href="assets/images/suites/Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-02.jpg" data-fancybox="perola-19" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-03.jpg" data-fancybox="perola-19" class="hidden"></a>
+					</span>
+					<section class="informacoes">
+						<span class="titulo">Suíte Pérola</span>
+						<p class="descricao suites"><span></span>Suíte 19</p>
+						<section class="detalhes">
+							<div class="blocos periodos">
+								<h3><span class="periodo"></span>Preços e períodos:</h3>
+								<p>Todos os dias após as 6h</p>
+								<p>Permanência de 3 horas</p>
+								<p class="preco">R$ 110,00</p>
+							</div>
+							<div class="blocos pernoites">
+								<h3><span class="pernoite"></span>Pernoites:</h3>
+								<p>Dom a 5ª a partir das 2h</p>
+								<p>Permanência até as 11h</p>
+								<p class="preco">R$ 000,00</p>
+							</div>
+							<div class="blocos descricao">
+								<h3><span class="descricao"></span>Essa suíte tem:</h3>
+								<p><strong>Cama massageadora</strong>, smart TV 40", frigobar, ar condicionado, espelho no teto, som USB e secador de cabelo.</p>
+							</div>
+						</section>
+					</section>
+				</li>
+				<li>
+					<span class="imagem perola-20">
+						<a href="assets/images/suites/Perola/Suíte-20/foto-suíte-20-perola-vintage-perspectiva-01.jpg" data-fancybox="perola-20">
+							<span></span>
+							Ver fotos
+						</a>
+						<a href="assets/images/suites/Perola/Suíte-20/foto-suíte-20-perola-vintage-perspectiva-02.jpg" data-fancybox="perola-20" class="hidden"></a>
+						<a href="assets/images/suites/Perola/Suíte-20/foto-suíte-20-perola-vintage-perspectiva-03.jpg" data-fancybox="perola-20" class="hidden"></a>
+					</span>
+					<section class="informacoes">
+						<span class="titulo">Suíte Pérola</span>
+						<p class="descricao suites"><span></span>Suíte 20</p>
+						<section class="detalhes">
+							<div class="blocos periodos">
+								<h3><span class="periodo"></span>Preços e períodos:</h3>
+								<p>Todos os dias após as 6h</p>
+								<p>Permanência de 3 horas</p>
+								<p class="preco">R$ 110,00</p>
+							</div>
+							<div class="blocos pernoites">
+								<h3><span class="pernoite"></span>Pernoites:</h3>
+								<p>Dom a 5ª a partir das 2h</p>
+								<p>Permanência até as 11h</p>
+								<p class="preco">R$ 000,00</p>
+							</div>
+							<div class="blocos descricao">
+								<h3><span class="descricao"></span>Essa suíte tem:</h3>
+								<p><strong>Cama no formato de carro</strong>, smart TV 40", frigobar, ar condicionado, espelho no teto, som USB e secador de cabelo.</p>
+							</div>
+						</section>
+					</section>
+				</li>
+			</ul>
 		</section>
 
 		<section class="suites-home">
