--- a/production/rubi.html
+++ b/production/rubi.html
@@ -75,19 +75,19 @@
 			<ul>
 				<li>
 					<span class="imagem rubi-34">
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-01.jpg" data-fancybox="rubi-34" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-01.jpg" data-fancybox="rubi-34">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-02.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-03.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-04.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-05.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-06.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-02.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-03.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-04.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-05.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-06.jpg" data-fancybox="rubi-34" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
-						<p class="descricao suites">Suíte 34</p>
+						<p class="descricao suites"><span></span>Suíte 34</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -103,24 +103,24 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 40", cama box, <strong>banheira oval</strong>, frigobar, ar condicionado, som e secador.</p>
+								<p><strong>Banheira oval</strong>, smart TV 40", cama box, frigobar, ar condicionado, som e secador.</p>
 							</div>
 						</section>
 					</section>
 				</li>
 				<li>
 					<span class="imagem rubi-35">
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-01.jpg" data-fancybox="rubi-35" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-01.jpg" data-fancybox="rubi-35">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-02.jpg" data-fancybox="rubi-35" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-03.jpg" data-fancybox="rubi-35" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-04.jpg" data-fancybox="rubi-35" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-02.jpg" data-fancybox="rubi-35" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-03.jpg" data-fancybox="rubi-35" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-04.jpg" data-fancybox="rubi-35" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
-						<p class="descricao suites">Suíte 35</p>
+						<p class="descricao suites"><span></span>Suíte 35</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
 								<h3><span class="periodo"></span>Preços e períodos:</h3>
@@ -136,7 +136,7 @@
 							</div>
 							<div class="blocos descricao">
 								<h3><span class="descricao"></span>Essa suíte tem:</h3>
-								<p>Smart TV 40", cama box, <strong>banheira oval</strong>, frigobar, ar condicionado, som e secador.</p>
+								<p><strong>Banheira oval</strong>, smart TV 40", cama box, frigobar, ar condicionado, som e secador.</p>
 							</div>
 						</section>
 					</section>
