atualizando logo e cores

--- a/sobre.html
+++ b/sobre.html
@@ -17,17 +17,17 @@
 		<span id="hamburguer"></span>
 
 		<section class="menu-principal-mobile">
-			<img src="assets/images/logo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+			<img src="assets/images/logo-pousada-voce-que-sabe.svg" alt="Imagem do logo">
 		</section>
 
 		<section class="menu-principal">
 			<nav>
 				<header>
 					<a href="index.html" class="logoAlternativo">
-						<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+						<img src="assets/images/logo-pousada-voce-que-sabe-v2.svg" alt="Imagem do logo">
 					</a>
 					<a href="index.html" class="logo">
-						<img src="assets/images/logo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+						<img src="assets/images/logo-pousada-voce-que-sabe.svg" alt="Imagem do logo">
 					</a>
 				</header>
 				<ul>
@@ -164,7 +164,7 @@
 
 			<section class="contatos">
 				<section class="blocos logo">
-					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+					<img src="assets/images/logo-pousada-voce-que-sabe-v2.png" alt="Imagem do logo">
 				</section>
 
 				<section class="blocos endereco">
