adicionando links em facilidades

--- a/index.html
+++ b/index.html
@@ -94,36 +94,52 @@
 				
 				<ul>
 					<li>
-						<span class="icone sinuca"></span>
-						Com mesa de sinuca integrada na suíte.
+						<a href="brilhante.html">
+							<span class="icone sinuca"></span>
+							Com mesa de sinuca integrada na suíte.
+						</a>
 					</li>
 					<li>
-						<span class="icone coracao"></span>
-						Que possui uma cama e uma hidro no formato de coração.
+						<a href="rubi.html">
+							<span class="icone coracao"></span>
+							Que possui uma cama e uma hidro no formato de coração.
+						</a>
 					</li>
 					<li>
-						<span class="icone churrasqueira"></span>
-						Com churrasqueira integrada na suíte.
+						<a href="brilhante.html">
+							<span class="icone churrasqueira"></span>
+							Com churrasqueira integrada na suíte.
+						</a>
 					</li>
 					<li>
-						<span class="icone carro"></span>
-						Onde a cama é um carro de verdade.
+						<a href="perola.html">
+							<span class="icone carro"></span>
+							Onde a cama é um carro de verdade.
+						</a>
 					</li>
 					<li>
-						<span class="icone massagem"></span>
-						Com uma cama massageadora.
+						<a href="perola.html">
+							<span class="icone massagem"></span>
+							Com uma cama massageadora.
+						</a>
 					</li>
 					<li>
-						<span class="icone vintage"></span>
-						Com uma suíte vintage.
+						<a href="perola.html">
+							<span class="icone vintage"></span>
+							Com uma suíte vintage.
+						</a>
 					</li>
 					<li>
-						<span class="icone oriental"></span>
-						Com uma suíte que relembra o verdadeiro clima oriental.
+						<a href="esmeralda.html">
+							<span class="icone oriental"></span>
+							Com uma suíte que relembra o verdadeiro clima oriental.
+						</a>
 					</li>
 					<li>
-						<span class="icone hidro"></span>
-						Que tem mais de 6 formatos de hidros diferentes.
+						<a href="rubi.html">
+							<span class="icone hidro"></span>
+							Que tem mais de 6 formatos de hidros diferentes.
+						</a>
 					</li>
 				</ul>
 			</section>
