adicionando links em facilidades

--- a/index.html
+++ b/index.html
@@ -222,107 +222,113 @@
 			<section class="facilidades">
 				<ul>
 					<li>
-						<a href="#higiene" class="colorbox">
+						<a data-fancybox data-src="#higiene" href="javascript:;">
 							<span class="icone higiene"></span>
 							<span class="texto">Higiene</span>
 							<span class="mais">+</span>
 						</a>
+
+						<div style="display: none;" id="higiene" class="modal">
+							<h2>Higiene</h2>
+							<p>Temos uma infraestrutura enorme para cuidar da higienização e limpeza da pousada, caso queira conhecer solicite na entrada da pousada.</p>
+						</div>
 					</li>
 					<li>
-						<a href="#seguranca" class="colorbox">
+						<a data-fancybox data-src="#seguranca" href="javascript:;">
 							<span class="icone seguranca"></span>
 							<span class="texto">Segurança</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="seguranca" class="modal">
+							<h2>Segurança</h2>
+							<p>
+								O interior da pousada é monitorado 24 horas e contamos com portão automático com entrada liberada somente após a identificação.
+							</p>
+						</div>
 					</li>
 					<li>
-						<a href="#permanencia" class="colorbox">
+						<a data-fancybox data-src="#permanencia" href="javascript:;">
 							<span class="icone permanencia"></span>
 							<span class="texto">Permanência</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="permanencia" class="modal">
+							<h2>Permanência</h2>
+							<p>
+								12 horas de permanência todos os dias, inclusive finais de semana e feriados. (Por tempo limitado).
+							</p>
+						</div>
 					</li>
 					<li>
-						<a href="#agua" class="colorbox">
+						<a data-fancybox data-src="#agua" href="javascript:;">
 							<span class="icone agua"></span>
 							<span class="texto">Falta d'água</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="agua" class="modal">
+							<h2>Falta d'água</h2>
+							<p>
+								E se faltar água durante a sua estadia, o que fazer? Na pousada Você que Sabe temos uma infraestrutura que suporta até 5 dias sem reabastecimento.
+							</p>
+						</div>
 					</li>
 				</ul>
 
 				<ul>
 					<li>
-						<a href="#wifi" class="colorbox">
+						<a data-fancybox data-src="#wifi" href="javascript:;">
 							<span class="icone wifi"></span>
 							<span class="texto">Wi-fi</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="wifi" class="modal">
+							<h2>Wi-fi</h2>
+							<p>
+								Todas as suítes mesmo as mais simples têm acesso à internet Wifi gratuitamente.
+							</p>
+						</div>
 					</li>
 					<li>
-						<a href="#tv" class="colorbox">
+						<a data-fancybox data-src="#tv" href="javascript:;">
 							<span class="icone tv"></span>
 							<span class="texto">TV</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="tv" class="modal">
+							<h2>TV</h2>
+							<p>
+								Todas as suítes mesmo as mais simples estão equipadas com Tv de Led e as suítes mais luxuosas contam com Smart TV.
+							</p>
+						</div>
 					</li>
 					<li>
-						<a href="#ar" class="colorbox">
+						<a data-fancybox data-src="#ar" href="javascript:;">
 							<span class="icone ar"></span>
 							<span class="texto">Ar condicionado</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="ar" class="modal">
+							<h2>Ar condicionado</h2>
+							<p>
+								Temos 37 suítes, sendo 26 delas com ar condicionado e as demais com ventilador.
+							</p>
+						</div>
 					</li>
 					<li>
-						<a href="#seducao" class="colorbox">
+						<a data-fancybox data-src="#seducao" href="javascript:;">
 							<span class="icone seducao"></span>
 							<span class="texto">Sedução e fetiche</span>
 							<span class="mais">+</span>
 						</a>
+						<div style="display: none;" id="seducao" class="modal">
+							<h2>Sedução e fetiche</h2>
+							<p>
+								Temos um Sex Shop Integrado na pousada exclusivo para clientes.
+							</p>
+						</div>
 					</li>
 				</ul>
 			</section>
-
-			<div class="modalFacilidades">
-				<p id="higiene">
-					Temos uma infraestrutura enorme para cuidar da higienização e limpeza da pousada, caso queira conhecer solicite na entrada da pousada.
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="seguranca">
-					O interior da pousada é monitorado 24 horas e contamos com portão automático com entrada liberada somente após a identificação.
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="permanencia">
-					12 horas de permanência todos os dias, inclusive finais de semana e feriados. (Por tempo limitado).
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="agua">
-					E se faltar água durante a sua estadia, o que fazer? Na pousada Você que Sabe temos uma infraestrutura que suporta até 5 dias sem reabastecimento.
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="wifi">
-					Todas as suítes mesmo as mais simples têm acesso à internet Wifi gratuitamente.
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="tv">
-					Todas as suítes mesmo as mais simples estão equipadas com Tv de Led e as suítes mais luxuosas contam com Smart TV.
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="ar">
-					Temos 37 suítes, sendo 26 delas com ar condicionado e as demais com ventilador.
-				</p>
-			</div>
-			<div class="modalFacilidades">
-				<p id="seducao">
-					Temos um Sex Shop Integrado na pousada exclusivo para clientes.
-				</p>
-			</div>
 		</section>
 
 		<section class="nossas-promocoes">
