--- a/sobre.html
+++ b/sobre.html
@@ -177,6 +177,7 @@
 				<section class="blocos informacoes">
 					<h3><span class="informacoes"></span> Informações</h3>
 					<p>(15) 98835-0269</p>
+					<a href="mailto:souvip@pousadavocequesabe.com.br">souvip@pousadavocequesabe.com.br</a>
 				</section>
 
 				<aside class="blocos social">
