diminuindo font-size

--- a/index.html
+++ b/index.html
@@ -214,6 +214,22 @@
 					</a>
 				</li>
 			</ul>
+
+			<h1 class="temosTambem">Temos também</h1>
+			<ul>
+				<li>
+					<a href="javascript:void();" style="cursor: default;">
+						<span class="imagem brilhante"></span>
+						<span class="titulo">Sex Shop</span>
+					</a>
+				</li>
+				<li>
+					<a href="javascript:void();" style="cursor: default;">
+						<span class="imagem rubi-duplex"></span>
+						<span class="titulo">Kitnet</span>
+					</a>
+				</li>
+			</ul>
 		</section>
 
 		<section class="facilidades-pousada">
