--- a/perola.html
+++ b/perola.html
@@ -75,6 +75,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Pérola</span>
 					<span class="imagem perola-15">
 						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-01.jpg" data-fancybox="perola-15">
 							<span></span>
@@ -88,7 +89,6 @@
 						<a href="assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-07.jpg" data-fancybox="perola-15" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Pérola</span>
 						<p class="descricao suites"><span></span>Suíte 15</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -121,7 +121,6 @@
 						<a href="assets/images/suites/Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-03.jpg" data-fancybox="perola-19" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Pérola</span>
 						<p class="descricao suites"><span></span>Suíte 19</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -153,7 +152,6 @@
 						<a href="assets/images/suites/Perola/Suíte-20/foto-suíte-20-perola-vintage-perspectiva-03.jpg" data-fancybox="perola-20" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Pérola</span>
 						<p class="descricao suites"><span></span>Suíte 20</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
