--- a/production/esmeralda.html
+++ b/production/esmeralda.html
@@ -74,6 +74,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Esmeralda</span>
 					<span class="imagem esmeralda-24">
 						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-01.jpg" data-fancybox="esmeralda-24">
 							<span></span>
@@ -86,7 +87,6 @@
 						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-06.jpg" data-fancybox="esmeralda-24" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Brilhante</span>
 						<p class="descricao suites"><span></span>Suíte 24</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -118,7 +118,6 @@
 						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-03.jpg" data-fancybox="esmeralda-25" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Brilhante</span>
 						<p class="descricao suites"><span></span>Suíte 25</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
