--- a/production/rubi.html
+++ b/production/rubi.html
@@ -74,6 +74,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Rubi</span>
 					<span class="imagem rubi-34">
 						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-02.jpg" data-fancybox="rubi-34">
 							<span></span>
@@ -86,7 +87,6 @@
 						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-06.jpg" data-fancybox="rubi-34" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Rubi</span>
 						<p class="descricao suites"><span></span>Suíte 34</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -119,7 +119,6 @@
 						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-04.jpg" data-fancybox="rubi-35" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Rubi</span>
 						<p class="descricao suites"><span></span>Suíte 35</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
