--- a/diamante.html
+++ b/diamante.html
@@ -75,6 +75,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Diamante</span>
 					<span class="imagem diamante-11">
 						<a href="assets/images/suites/Diamante/Suíte-11/Foto-suíte-11-diamanete-perspectiva-01.jpg" data-fancybox="diamante-11">
 							<span></span>
@@ -85,7 +86,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-11/Foto-suíte-11-diamanete-perspectiva-04.jpg" data-fancybox="diamante-11" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 11</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -117,7 +117,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-12/Foto-suíte-12-diamanete-perspectiva-03.jpg" data-fancybox="diamante-12" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 12</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -151,7 +150,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-13/Foto-suíte-13-diamanete-perspectiva-05.jpg" data-fancybox="diamante-13" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 13</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -184,7 +182,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-14/Foto-suíte-14-diamanete-perspectiva-04.jpg" data-fancybox="diamante-14" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 14</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -217,7 +214,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-16/Foto-suíte-16-diamanete-perspectiva-04.jpg" data-fancybox="diamante-16" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 16</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -249,7 +245,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-21/foto-suíte-21-diamanete-perspectiva-03.jpg" data-fancybox="diamante-21" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 21</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -281,7 +276,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-22/Foto-suíte-22-diamanete-perspectiva-03.jpg" data-fancybox="diamante-22" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 22</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -314,7 +308,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-23/Foto-suíte-23-diamanete-perspectiva-04.jpg" data-fancybox="diamante-23" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 23</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -346,7 +339,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-26/Foto-suíte-26-diamanete-perspectiva-03.jpg" data-fancybox="diamante-26" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 26</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -378,7 +370,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-27/foto-suite-27-diamante-perspectiva-03.jpg" data-fancybox="diamante-27" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 27</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -411,7 +402,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-28/foto-suite-28-diamante-perspectiva-04.jpg" data-fancybox="diamante-28" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 28</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -443,7 +433,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-29/foto-suite-29-diamante-perspectiva-03.jpg" data-fancybox="diamante-29" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 29</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -476,7 +465,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-30/foto-suite-30-diamante-perspectiva-04.jpg" data-fancybox="diamante-30" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 30</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -508,7 +496,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-31/foto-suite-31-diamante-perspectiva-03.jpg" data-fancybox="diamante-31" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 31</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
