--- a/ouro.html
+++ b/ouro.html
@@ -75,6 +75,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Ouro</span>
 					<span class="imagem ouro-32">
 						<a href="assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-01.jpg" data-fancybox="ouro-32">
 							<span></span>
@@ -84,7 +85,6 @@
 						<a href="assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-03.jpg" data-fancybox="ouro-32" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Ouro</span>
 						<p class="descricao suites"><span></span>Suíte 32</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -116,7 +116,6 @@
 						<a href="assets/images/suites/Ouro/Suíte-33/Foto-suíte-33-ouro-perspectiva-03.jpg" data-fancybox="ouro-33" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Ouro</span>
 						<p class="descricao suites"><span></span>Suíte 33</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
