--- a/production/diamante.html
+++ b/production/diamante.html
@@ -74,6 +74,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Diamante</span>
 					<span class="imagem diamante-11">
 						<a href="assets/images/suites/Diamante/Suíte-11/Foto-suíte-11-diamanete-perspectiva-01.jpg" data-fancybox="diamante-11">
 							<span></span>
@@ -84,7 +85,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-11/Foto-suíte-11-diamanete-perspectiva-04.jpg" data-fancybox="diamante-11" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 11</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -116,7 +116,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-12/Foto-suíte-12-diamanete-perspectiva-03.jpg" data-fancybox="diamante-12" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 12</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -150,7 +149,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-13/Foto-suíte-13-diamanete-perspectiva-05.jpg" data-fancybox="diamante-13" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 13</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -183,7 +181,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-14/Foto-suíte-14-diamanete-perspectiva-04.jpg" data-fancybox="diamante-14" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 14</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -216,7 +213,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-16/Foto-suíte-16-diamanete-perspectiva-04.jpg" data-fancybox="diamante-16" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 16</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -248,7 +244,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-21/foto-suíte-21-diamanete-perspectiva-03.jpg" data-fancybox="diamante-21" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 21</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -280,7 +275,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-22/Foto-suíte-22-diamanete-perspectiva-03.jpg" data-fancybox="diamante-22" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 22</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -313,7 +307,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-23/Foto-suíte-23-diamanete-perspectiva-04.jpg" data-fancybox="diamante-23" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 23</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -345,7 +338,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-26/Foto-suíte-26-diamanete-perspectiva-03.jpg" data-fancybox="diamante-26" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 26</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -377,7 +369,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-27/foto-suite-27-diamante-perspectiva-03.jpg" data-fancybox="diamante-27" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 27</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -410,7 +401,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-28/foto-suite-28-diamante-perspectiva-04.jpg" data-fancybox="diamante-28" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 28</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -442,7 +432,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-29/foto-suite-29-diamante-perspectiva-03.jpg" data-fancybox="diamante-29" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 29</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -475,7 +464,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-30/foto-suite-30-diamante-perspectiva-04.jpg" data-fancybox="diamante-30" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 30</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -507,7 +495,6 @@
 						<a href="assets/images/suites/Diamante/Suíte-31/foto-suite-31-diamante-perspectiva-03.jpg" data-fancybox="diamante-31" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao suites"><span></span>Suíte 31</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
