--- a/rubi-duplex.html
+++ b/rubi-duplex.html
@@ -75,6 +75,7 @@
 		<section class="suites-pousada">
 			<ul>
 				<li>
+					<span class="titulo">Suítes Rubi Duplex</span>
 					<span class="imagem rubi-duplex-17">
 						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-17">
 							<span></span>
@@ -88,7 +89,6 @@
 						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Rubi Duplex</span>
 						<p class="descricao suites"><span></span>Suíte 17</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
@@ -123,7 +123,6 @@
 						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
 					</span>
 					<section class="informacoes">
-						<span class="titulo">Suíte Rubi Duplex</span>
 						<p class="descricao suites"><span></span>Suíte 18</p>
 						<section class="detalhes">
 							<div class="blocos periodos">
