--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 						</a>
 					</li>
 					<li>
+						<a href="cardapio.html">
+							<span class="icone sobre"></span>
+							Cardápio
+						</a>
+					</li>
+					<li>
 						<a href="localizacao.html">
 							<span class="icone localizacao"></span>
 							Localização
